--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,32 +10,42 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+    <div class='page-container'>
+      <div class='page-head'>
+        <div class='o-wrapper'>
+          <nav class='site-nav'>
+            <a class='site-nav__home' href='/'>
+              {% include site-logo.html %}
+            </a>
+            {% if site.pages != null %}
+              <ul class='site-nav__list'>
+              {% for p in site.pages %}
+                {% if p.menu == 'main' %}
+                  <li class='site-nav__item'>
+                    <a href='{{ p.url }}'>{{ p.title }}</a>
+                  </li>
+                {% endif %}
+              {% endfor %}
+              </ul>
+            {% endif %}
           </nav>
-        </header>
+        </div>
       </div>
-    </div>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
+      <div id='main' role='main' class='page-content'>
+        <div class='o-wrapper'>
+          {{ content }}
+        </div>
+      </div>
+      <div class='page-footer'>
+        
+      </div>
     </div>
 
     <div class="wrapper-footer">
