--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,13 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+  <time class="post__date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </time>  
+  <h1 class='post__title'>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
