--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,10 +3,9 @@
   background-color: #2f2f2f;
   color: #B1B1B1;
   padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
